(Backend): Configure image storage
